--- a/jdbcdemo/.classpath
+++ b/jdbcdemo/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/classroom/derby/lib/derby.jar"/>
 	<classpathentry kind="lib" path="C:/classroom/derby/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="C:/classroom/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
