--- a/webdemo/WebContent/WEB-INF/web.xml
+++ b/webdemo/WebContent/WEB-INF/web.xml
@@ -2,11 +2,19 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>webdemo</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>home.html</welcome-file>
   </welcome-file-list>
+  <servlet>
+     <servlet-name>nowservlet</servlet-name>
+     <servlet-class>servlets.NowServlet</servlet-class>
+     <init-param>
+         <param-name>message</param-name>
+         <param-value>Java EE Web Applications</param-value>
+     </init-param>
+  </servlet>
+  <servlet-mapping>
+      <servlet-name>nowservlet</servlet-name>
+      <url-pattern>/today</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
