--- a/hb/pom.xml
+++ b/hb/pom.xml
@@ -24,6 +24,13 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.4.10.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
