--- a/springdemo/src/main/resources/application.properties
+++ b/springdemo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+<!-- Database connection properties -->
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=hr
+spring.datasource.password=hr
+spring.datasource.driver-class=oracle.jdbc.driver.OracleDriver
+
+
+<!-- Web server port -->
 server.port=9999
